# freelance-marketplace

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml
backend/: CMakeLists.txt  main.cpp
backend/config/: config.json
backend/controllers/: admin_controller.cpp  admin_controller.h  auth_controller.cpp  auth_controller.h  complaint_controller.cpp  complaint_controller.h  crawler_controller.cpp  crawler_controller.h  message_controller.cpp  message_controller.h  moderation_controller.cpp  moderation_controller.h  notification_controller.cpp  notification_controller.h  order_controller.cpp  order_controller.h  order_controller_search.cpp  response_controller.cpp  response_controller.h  review_controller.cpp  review_controller.h  role_controller.cpp  role_controller.h  search_controller.cpp  search_controller.h  user_controller.cpp  user_controller.h
backend/crawler/: web_crawler.cpp  web_crawler.h
backend/middleware/: auth_middleware.cpp  auth_middleware.h
backend/models/: user.h
backend/services/: auth_service.cpp  auth_service.h  order_service.cpp  order_service.h
backend/utils/: database.h  helpers.h  jwt_helper.cpp  jwt_helper.h  request_helper.h
database/migrations/: 001_initial_schema.sql  002_seed_data.sql
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/pages/: AdminPage.tsx  CrawlerPage.tsx  CreateOrderPage.tsx  FreelancerProfilePage.tsx  FreelancersPage.tsx  HomePage.tsx  LoginPage.tsx  MessagesPage.tsx  ModerationPage.tsx  MyOrdersPage.tsx  OrdersPage.tsx  (+6 more)
(+3 files in other folders)
